# uv-projects-model

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py
